# Flowtype

./: .gitignore  ASSET_PROVENANCE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Package.swift  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
Helpers/qwen-asr-helper/: README.md  pyproject.toml
Helpers/qwen-asr-helper/benchmarks/: cases.json  generate_fixtures.py  metrics.py  qwen_ab_benchmark.py
Helpers/qwen-asr-helper/qwen_asr_helper/: __init__.py  schemas.py  server.py
Helpers/qwen-asr-helper/tests/: test_benchmark_metrics.py  test_server.py
Resources/: DMGBackground.tiff  Flowtype.icns  Info.plist
Tests/VoiceInputAppTests/: ASRConfusionCorrectorTests.swift  ASRConfusionGoldenTests.swift  AcademicReferenceNormalizerTests.swift  AppBundleContractParityTests.swift  AppCopyTests.swift  AppMainMenuTests.swift  AppThemeTests.swift  AppleSpeechEngineTests.swift  ApplicationReopenPolicyTests.swift  AssembledAppBundleIntegrationTests.swift  AudioRecorderTests.swift  CandidateScorerTests.swift  CapsulePresentationTests.swift  CompactASRTokenNormalizerTests.swift  DebugRecordingStoreTests.swift  DiagnosticsExporterTests.swift  DictationSessionControllerTests.swift  (+70 more)
config/: app-bundle-contract.json
docs/: ARCHITECTURE.md  INSTALL.md  PRIVACY.md  TROUBLESHOOTING.md
script/: app_bundle.py  build_and_run.sh  create_dmg.sh  pyproject.toml  verify_package.sh
website/: README.md  index.html
(+127 files in other folders)
