[project]
name = "qwen-asr-helper"
version = "0.1.0"
description = "Local Qwen3-ASR helper service for Flowtype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "huggingface-hub>=0.24",
  "idna>=3.15",
  "mlx-qwen3-asr[serve]>=0.3.5,<0.4",
  "pydantic>=2.7",
  "python-multipart>=0.0.31",
  "starlette>=1.3.1",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[project.scripts]
qwen-asr-helper = "qwen_asr_helper.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
